--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <section class="operacoes">
             <h2>Operações Bancárias</h2>
             <div class="btn-grid">
-                <button id="btnDepositar" onclick="depositar()" disabled>Pagar Fatura</button>
-                <button id="btnSacar" onclick="sacar()" disabled>Sacar/Comprar</button>
+                <button id="btnDepositar" onclick="pagarFatura()" disabled>Pagar Fatura</button>
+                <button id="btnSacar" onclick="comprar()" disabled>Comprar com limite</button>
                 <button id="btnSaldo" onclick="verSaldo()" disabled>Ver fatura</button>
                 <button id="btnMov" onclick="listarMovimentos()" disabled>Listar Movimentações</button>
                 <button id="btnTrocar" onclick="trocarConta()" disabled>Trocar Conta</button>
@@ -47,6 +47,7 @@
         </section>
         <section class="resultados">
             <div class="resultado" id="resOperacoes"></div>
+            <div class="resultado" id="resOperacoesCredito"></div>
         </section>
         
     </main>
