Commit funções crédito guru

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 </button>
                 <button id="btnSacar" onclick="comprar()" disabled>
                     <img src="img/icons/saque_icon.svg" alt="">  
-                    <p>Sacar</p>
+                    <p>Comprar</p>
                 </button>
-                <button id="btnSaldo" onclick="verSaldo()" disabled>
+                <button id="btnSaldo" onclick="mostrarFatura()" disabled>
                     <img src="img/icons/ver_saldo_icon.svg" alt="">
-                    <p>Ver Saldo</p> 
+                    <p>Ver Fatura e Limite</p> 
                 </button>
                 <button id="btnMov" onclick="listarMovimentos()" disabled>
                     <img src="img/icons/historico_icon.svg" alt="">
